--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,9 +4,11 @@
     <title>EDA Phase 1 Express Boilerplate</title>
   </head>
   <body>
+    <h1>Profiles</h1>
+
     <ul>
     {{#each users}}
-      <li>{{name}} ({{email}})</li>
+      <li> <a href="/profile/{{id}}">{{name}}</a> </li>
     {{/each}}
     </ul>
   </body>
