user story 1 update

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -5,8 +5,14 @@
     <title></title>
   </head>
   <body>
-    {{user.id}}
     {{user.name}}
+    <br>
     {{user.pic}}
+    <br>
+    {{user.email}}
+    <br>
+    {{user.URL}}
+    <br>
+    <a href="/"><button>back</button></a>
   </body>
 </html>
