--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
       <li> <a href="/profile/{{id}}">{{name}}</a> </li>
     {{/each}}
     </ul>
-
+    <h2>Add New User</h2>
     <form action="/newUser" method="post">
       <input name="name" placeholder="name">
       <input name="email" placeholder="email">
