--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -5,8 +5,7 @@
     <title></title>
   </head>
   <body>
-    {{user.name}}
-    <br>
+    <h1>{{user.name}}</h1>
     {{user.pic}}
     <br>
     {{user.email}}
