--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EDA Phase 1 Express Boilerplate</title>
+    <title>Blogs</title>
   </head>
   <body>
     <h1>Profiles</h1>
