--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -12,6 +12,13 @@
     <br>
     {{user.URL}}
     <br>
+    <h2>Blogs:</h2>
+    {{#each posts}}
+    <a href="#">{{title}}</a>
+    <p>{{content}}</p>
+    {{/each}}
+    <!-- {{user.title}} -->
+
     <h2>Create Blog Post</h2>
     <form action="/newBlog" method="post">
       <input name="title" placeholder="title">
